# icloud-shared-album-sync

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  cspell.config.yaml  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: sync.py
src/icloud_sync/: __init__.py  apple_api.py  cli.py  manifest.py  orchestrator.py  storage.py
tests/: conftest.py  test_apple_api.py  test_cli.py  test_manifest.py  test_orchestrator.py  test_storage.py  test_sync.py
