[project]
name = "icloud-shared-album-sync"
version = "0.0.0"
description = "The shared album, backed up somewhere you actually control."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Bitwise Forge", email = "contact@bitwiseforge.com" },
]
# Runtime deps intentionally empty — src/sync.py is stdlib-only by design.
# See AGENTS.md and CONTRIBUTING.md for the "no runtime deps" hard rule.
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.15",
    "ty>=0.0.61",
    "pre-commit>=4",
]

[tool.uv]
# This project ships as a Docker image, not a pip package. uv should manage
# the environment but skip trying to install this tree as a package.
package = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort — import ordering
    "UP",   # pyupgrade — modernise syntax
    "B",    # flake8-bugbear — common bug patterns
    "SIM",  # flake8-simplify — code simplifications
    "RUF",  # Ruff-native rules
]
# Preserve author intent — don't auto-remove things ruff can't be sure about.
unfixable = ["F401"]

[tool.ruff.format]
# Defaults match Black. quote-style, indent-style, line-ending, docstring-code
# formatting all inherited from the standard Ruff formatter profile.

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
# Baseline strict-ish. Tune here as we tighten expectations.
possibly-unresolved-reference = "warn"
