[project]
name = "icloud-shared-album-sync"
version = "0.0.0"
description = "The shared album, backed up somewhere you actually control."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Bitwise Forge", email = "contact@bitwiseforge.com" },
]
dependencies = [
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.15",
    "ty>=0.0.61",
    "pre-commit>=4",
]

[tool.uv]
# This project ships as a Docker image, not a pip package. uv should manage
# the environment but skip trying to install this tree as a package.
package = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["icloud_sync"]
branch = true
# The __main__ trampoline runs at module load — nothing meaningful to
# assert about it beyond "it calls main()". Excluded so the 100% gate
# stays honest.
omit = ["*/icloud_sync/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort — import ordering
    "UP",   # pyupgrade — modernize syntax
    "B",    # flake8-bugbear — common bug patterns
    "SIM",  # flake8-simplify — code simplifications
    "RUF",  # Ruff-native rules
]
# Preserve author intent — don't auto-remove things ruff can't be sure about.
unfixable = ["F401"]

[tool.ruff.format]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
# Baseline strict-ish. Tune here as we tighten expectations.
possibly-unresolved-reference = "warn"
